--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
   "homepage": "http://redux.js.org",
   "dependencies": {
     "babel-polyfill": "^6.3.14",
+    "bootstrap": "^3.3.7",
     "classnames": "^2.1.2",
+    "css-loader": "^0.28.1",
     "react": "^15.0.1",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.0.1",
     "react-redux": "^4.2.1",
     "redux": "^3.2.1",
-    "stack-source-map": "^1.0.4"
+    "stack-source-map": "^1.0.4",
+    "style-loader": "^0.17.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1"
   },
   "devDependencies": {
     "@kadira/storybook": "^2.24.0",
